--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
+  
   "name": "contact_list",
   "version": "1.0.0",
   "description": "First project using express.js",
   "main": "index.js",
   "scripts": {
+    
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Pritam Chatterjee",
@@ -11,7 +13,7 @@
   "dependencies": {
     "ejs": "^3.1.3",
     "express": "^4.17.1",
-    "gh-pages": "^3.1.0",
     "mongoose": "^5.9.17"
-  }
+  },
+  "devDependencies": {}
 }
